--- a/style.css
+++ b/style.css
@@ -35,14 +35,16 @@ body {
   pointer-events: none;
 }
 
-.tinder--status i {
-  font-size: 100px;
+.tinder--status .status-icon {
+  width: 100px;
+  height: 100px;
   opacity: 0;
   transform: scale(0.3);
   transition: all 0.2s ease-in-out;
   position: absolute;
-  width: 100px;
   margin-left: -50px;
+  border-radius: 50%;
+  object-fit: cover;
 }
 
 .tinder_love .fa-heart {
@@ -135,15 +137,11 @@ body {
   outline: 0;
 }
 
-.tinder--buttons i {
-  font-size: 32px;
+.tinder--buttons .button-icon {
+  width: 32px;
+  height: 32px;
   vertical-align: middle;
+  border-radius: 50%;
+  object-fit: cover;
 }
 
-.fa-heart {
-  color: #FF6B6B;
-}
-
-.fa-remove {
-  color: #A8A8A8;
-}
